[gd_scene load_steps=5 format=3 uid="uid://ct3amptwpsh78"]

[ext_resource type="Script" path="res://examples/ClockTest.gd" id="1_0pvp2"]
[ext_resource type="Script" path="res://addons/stopwatch/Stopwatch.gd" id="2_u6g4d"]
[ext_resource type="StyleBox" uid="uid://b2cvg5uddsgbx" path="res://examples/ButtonStyle.tres" id="3_m1n2q"]

[sub_resource type="LabelSettings" id="LabelSettings_71mh4"]
font_size = 108

[node name="ClockTest" type="Control" node_paths=PackedStringArray("clock_label", "stopwatch", "start_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0pvp2")
clock_label = NodePath("Label")
stopwatch = NodePath("Stopwatch")
start_button = NodePath("Buttons/List/Start")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_71mh4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stopwatch" type="Node" parent="."]
script = ExtResource("2_u6g4d")
pause_on_reset = true

[node name="Buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 55

[node name="List" type="HBoxContainer" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 36
alignment = 1

[node name="Start" type="Button" parent="Buttons/List"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_m1n2q")
text = "Start"

[node name="Reset" type="Button" parent="Buttons/List"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("3_m1n2q")
text = "Reset"

[connection signal="pause_state_changed" from="Stopwatch" to="." method="_on_stopwatch_pause_state_changed"]
[connection signal="pressed" from="Buttons/List/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/List/Reset" to="." method="_on_reset_pressed"]
